==> MrKaiKai/ESP8266/oled/main/oled.c <==
#include "myiic.h"
#include "driver/i2c.h"
#include "oled.h"
#include "stdlib.h"
#include "oledfont.h"

int oled_write_cmd(uint8_t command)
{
	//注释参考sht30之i2c教程
	int ret;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	ret = i2c_master_start(cmd);
	ret = i2c_master_write_byte(cmd, OLED_WRITE_ADDR | WRITE_BIT, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, WRITE_CMD, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, command, ACK_CHECK_EN);
	ret = i2c_master_stop(cmd);
	ret = i2c_master_cmd_begin(I2C_OLED_MASTER_NUM, cmd,
			100 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	return ret;
}

int oled_write_data(uint8_t data)
{
	//注释参考sht30之i2c教程
	int ret;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	ret = i2c_master_start(cmd);
	ret = i2c_master_write_byte(cmd, OLED_WRITE_ADDR | WRITE_BIT, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, WRITE_DATA, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, data, ACK_CHECK_EN);
	ret = i2c_master_stop(cmd);
	ret = i2c_master_cmd_begin(I2C_OLED_MASTER_NUM, cmd,
			100 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);

	return ret;
}

void OLED_Set_Pos(unsigned char x, unsigned char y)
{
	OLED_WR_Byte(0xb0 + y, OLED_CMD);
	OLED_WR_Byte(((x & 0xf0) >> 4) | 0x10, OLED_CMD);
	OLED_WR_Byte((x & 0x0f), OLED_CMD);
}

void OLED_Clear(void)
{
	uint8_t i, n;
	for (i = 0; i < 8; i++)
	{
		OLED_WR_Byte(0xb0 + i, OLED_CMD);    //设置页地址（0~7）
		OLED_WR_Byte(0x00, OLED_CMD);      //设置显示位置—列低地址
		OLED_WR_Byte(0x10, OLED_CMD);      //设置显示位置—列高地址
		for (n = 0; n < 128; n++)
			OLED_WR_Byte(0, OLED_DATA);
	} //更新显示
}

void OLED_ShowChar(uint8_t x, uint8_t y, uint8_t chr, uint8_t size)
{
	unsigned char c = 0, i = 0, Nom;
	c = chr - ' '; //得到偏移后的值
	if (x > Max_Column - 1)
	{
		x = 0;
		y = y + 2;
	}
	if (size == 16)
	{
		for (Nom = 0; Nom < 95; Nom++)
		{
			if (F8X16[Nom].Index1[0] == chr)
			{
				OLED_Set_Pos(x, y);
				for (i = 0; i < 8; i++)
					OLED_WR_Byte(F8X16[Nom].Msk1[i], OLED_DATA);
				OLED_Set_Pos(x, y + 1);
				for (i = 0; i < 8; i++)
					OLED_WR_Byte(F8X16[Nom].Msk1[i + 8], OLED_DATA);
			}
		}
	}
	else
	{
		OLED_Set_Pos(x, y + 1);
		for (i = 0; i < 6; i++)
			OLED_WR_Byte(F6x8[c][i], OLED_DATA);

	}
}

void OLED_Init(void)
{
	OLED_Clear();
	OLED_WR_Byte(0xAE, OLED_CMD);	  //--display off
	OLED_WR_Byte(0x00, OLED_CMD);	  //---set low column address
	OLED_WR_Byte(0x10, OLED_CMD);	  //---set high column address
	OLED_WR_Byte(0x40, OLED_CMD);	  //--set start line address
	OLED_WR_Byte(0xB0, OLED_CMD);	  //--set page address
	OLED_WR_Byte(0x81, OLED_CMD); // contract control
	OLED_WR_Byte(0xFF, OLED_CMD); //--128
	OLED_WR_Byte(0xA1, OLED_CMD); //set segment remap
	OLED_WR_Byte(0xA6, OLED_CMD); //--normal / reverse
	OLED_WR_Byte(0xA8, OLED_CMD); //--set multiplex ratio(1 to 64)
	OLED_WR_Byte(0x3F, OLED_CMD); //--1/32 duty
	OLED_WR_Byte(0xC8, OLED_CMD); //Com scan direction
	OLED_WR_Byte(0xD3, OLED_CMD); //-set display offset
	OLED_WR_Byte(0x00, OLED_CMD); //

	OLED_WR_Byte(0xD5, OLED_CMD); //set osc division
	OLED_WR_Byte(0x80, OLED_CMD); //

	OLED_WR_Byte(0xD8, OLED_CMD); //set area color mode off
	OLED_WR_Byte(0x05, OLED_CMD); //

	OLED_WR_Byte(0xD9, OLED_CMD); //Set Pre-Charge Period
	OLED_WR_Byte(0xF1, OLED_CMD); //

	OLED_WR_Byte(0xDA, OLED_CMD); //set com pin configuartion
	OLED_WR_Byte(0x12, OLED_CMD); //

	OLED_WR_Byte(0xDB, OLED_CMD); //set Vcomh
	OLED_WR_Byte(0x30, OLED_CMD); //

	OLED_WR_Byte(0x8D, OLED_CMD); //set charge pump enable
	OLED_WR_Byte(0x14, OLED_CMD); //

	OLED_WR_Byte(0xAF, OLED_CMD); //--turn on oled panel
}
