==> Oblivionaut/College-Contest/User_Code/oled.c <==
#include "oled.h"

void OLED_WriteCmd(uint8_t cmd)
{
    uint8_t data[2] = {0x00, cmd};
    HAL_I2C_Master_Transmit(&hi2c2, OLED_ADDR, data, 2, 100);
}

void OLED_WriteData(uint8_t data)
{
    uint8_t buf[2] = {0x40, data};
    HAL_I2C_Master_Transmit(&hi2c2, OLED_ADDR, buf, 2, 100);
}

void OLED_SetPos(uint8_t x, uint8_t y)
{
    OLED_WriteCmd(0xb0 + y);
    OLED_WriteCmd(((x & 0xf0) >> 4) | 0x10);
    OLED_WriteCmd(x & 0x0f);
}

void OLED_Clear(void)
{
    uint8_t i, n;
    for(i = 0; i < 8; i++)
    {
        OLED_WriteCmd(0xb0 + i);
        OLED_WriteCmd(0x00);
        OLED_WriteCmd(0x10);
        for(n = 0; n < 128; n++)
        {
            OLED_WriteData(0x00);
        }
    }
}

void OLED_Init(void)
{
    MX_I2C2_Init();
    
    HAL_Delay(100);
    
    OLED_WriteCmd(0xAE); // 关闭显示
    OLED_WriteCmd(0xD5); // 设置时钟分频因子,震荡频率
    OLED_WriteCmd(0x80); // [3:0],分频因子;[7:4],震荡频率
    OLED_WriteCmd(0xA8); // 设置驱动路数
    OLED_WriteCmd(0x3F); // 1/64 duty
    OLED_WriteCmd(0xD3); // 设置显示偏移
    OLED_WriteCmd(0x00); // 无偏移
    OLED_WriteCmd(0x40); // 设置显示开始行 [5:0],行数
    OLED_WriteCmd(0x8D); // 电荷泵设置
    OLED_WriteCmd(0x14); // 开启电荷泵
    OLED_WriteCmd(0x20); // 设置内存地址模式
    OLED_WriteCmd(0x02); // 页地址模式
    OLED_WriteCmd(0xA1); // 段重定义设置,bit0:0,0->0;1,127->0
    OLED_WriteCmd(0xC8); // COM扫描方向;bit3:0,普通模式;1,重定义模式
    OLED_WriteCmd(0xDA); // 设置COM硬件引脚配置
    OLED_WriteCmd(0x12);
    OLED_WriteCmd(0x81); // 对比度设置
    OLED_WriteCmd(0xCF);
    OLED_WriteCmd(0xD9); // 设置预充电周期
    OLED_WriteCmd(0xF1);
    OLED_WriteCmd(0xDB); // 设置VCOMH取消选择级别
    OLED_WriteCmd(0x30);
    OLED_WriteCmd(0xA4); // 全局显示开启;bit0:1,开启;0,关闭
    OLED_WriteCmd(0xA6); // 设置显示方式;bit0:1,反相显示;0,正常显示
    OLED_WriteCmd(0xAF); // 开启显示
    
    OLED_Clear();
}

void OLED_ShowChar(uint8_t row, uint8_t col, char ch)
{
    uint8_t c = 0, i = 0;
    
    // 转换为从0开始的索引
    row--;
    col--;
    
    c = ch - ' '; // 得到偏移后的值
    
    if(row > 7 || col > 15) return; // 超出范围
    
    OLED_SetPos(col * 8, row);
    
    for(i = 0; i < 8; i++)
    {
        OLED_WriteData(F8X16[c * 16 + i]);
    }
    
    OLED_SetPos(col * 8, row + 1);
    
    for(i = 0; i < 8; i++)
    {
        OLED_WriteData(F8X16[c * 16 + i + 8]);
    }
}
